# plotsigs

./: .gitignore  EXAMPLES.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
docs/: dash-architecture.md  dash-implementation.md  examples-gallery.md  examples.md  implementation-plan.html  implementation-plan.md  index.md  issues.md  roadmap.md  test-strategy.md
examples/: compressor_analysis_template.yaml  compressor_plot_data.yaml  compressor_real_data_log_1.csv  compressor_real_data_log_2.csv  compressor_sim_data.csv  ex_batch.py  ex_compare_naive_correct.py  ex_enum_phases.py  ex_export.py  ex_multi_log_analysis.py  ex_plot_control_transient.py  ex_plot_csv_analysis.py  ex_plot_csv_analysis_sim.py  ex_plot_from_csv.py  ex_plot_from_script.py  ex_plot_from_yaml.py  ex_quickplot.py  ex_quickplot_from_yaml.py  ex_real_log_analysis.py  ex_real_log_analysis.yaml  ex_render_spec.py  ex_render_spec_plotly.py  ex_template_function.py  quickplot_config.yaml
output/: dash_test.md  performance_review.md  performance_review_2.md  real_log_analysis.drawio  real_log_analysis.excalidraw  render_spec_plotly.html  smoke_plotly.html
plotsigs/: __init__.py  analysis.py  annotations.py  dash_app.py  diagram.py  export.py  loader.py  quickplot.py  renderer.py  renderer_plotly.py  signals.py  sim.py  spec.py  style.py
temp/: To record logs for a Plotly Dash web app.txt  another_debug_method.md  code_review.md  python_debug_log.txt  temp_ex_render_spec_plotly.py  temp_log_paste_python.txt
tests/: conftest.py  test_callbacks.py  test_figure.py  (+2 more)
(+1 files in other folders)
