[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotsigs"
version = "0.1.0"
description = "Control system signal & timing diagram library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "scipy>=1.9",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = ["pytest", "ruff", "black", "pandas>=1.5"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["plotsigs*"]
