[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotsigs"
version = "0.1.0"
description = "Control system signal & timing diagram library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "scipy>=1.9",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
plotly = ["plotly>=5.18"]
dash   = ["plotly>=5.18", "dash>=2.14", "plotly-resampler>=0.9"]
dev    = ["pytest", "ruff", "black", "pandas>=1.5", "plotly>=5.18", "dash>=2.14", "plotly-resampler>=0.9"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["plotsigs*"]
